Used Partial tag helper

--- a/Departments.Service/Views/Department/DepartmentDetails.cshtml
+++ b/Departments.Service/Views/Department/DepartmentDetails.cshtml
@@ -2,5 +2,5 @@
 
 <h2>Department Details</h2>
 <ul class="department-ul">
-   @Html.Partial("_DepartmentPartial", Model)
+    <partial name="_DepartmentPartial" model="@Model" />
 </ul>
