--- a/Departments.Service/Views/Department/_DepartmentPartial.cshtml
+++ b/Departments.Service/Views/Department/_DepartmentPartial.cshtml
@@ -11,7 +11,7 @@
     <ul class="department-ul">
         @foreach (var subDepartment in Model.SubDepartments)
         {
-            @Html.Partial("_DepartmentPartial", subDepartment)
+            <partial name="_DepartmentPartial" model="@subDepartment" />
         }
     </ul>
 }
