--- a/Departments.Service/Views/Department/_DepartmentPartial.cshtml
+++ b/Departments.Service/Views/Department/_DepartmentPartial.cshtml
@@ -1,10 +1,6 @@
 @model Departments.ViewModel.DepartmentViewModel
 
-<strong>@Model.Name</strong>
-<img src="@Model.LogoPath" alt="@Model.Name" class="small-logo" />
-<a href="@Url.Action("DepartmentDetails", "Department", new { departmentID = Model.ID })" class="btn-custom">
-        Show Sub-departments
-</a>
+<partial name="_DepartmentElement" model="@Model" />
 
 @if (Model.SubDepartments != null && Model.SubDepartments.Any())
 {
