--- a/Departments.Service/Views/Shared/_Layout.cshtml
+++ b/Departments.Service/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">Departments</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reminder" asp-action="Index">Reminders</a>
+                        </li>
                     </ul>
                 </div>
             </div>
