Added Creating new reminder

--- a/Departments.Service/Views/Reminder/Index.cshtml
+++ b/Departments.Service/Views/Reminder/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Departments.Model.Reminder>
+@model IEnumerable<Departments.ViewModel.ReminderViewModel>
 
 @{
     ViewData["Title"] = "Reminders";
