--- a/Departments.Service/Views/Reminder/Create.cshtml
+++ b/Departments.Service/Views/Reminder/Create.cshtml
@@ -1,4 +1,4 @@
-@model Departments.Model.Reminder
+@model Departments.ViewModel.CreateReminderViewModel
 
 @{
     ViewData["Title"] = "Create Reminder";
