Fixed Views Styles

--- a/Departments.Service/Views/Department/DepartmentDetails.cshtml
+++ b/Departments.Service/Views/Department/DepartmentDetails.cshtml
@@ -1,6 +1,6 @@
 @model Departments.ViewModel.DepartmentViewModel
 
-<h2>Department Details</h2>
+<h2>Department <b>@Model.Name</b> Details</h2>
 <ul class="department-ul">
     <partial name="_DepartmentPartial" model="@Model" />
 </ul>
